# python_project_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cookiecutter.json  notes.md  pyproject.toml
app/: main.py
cookiecutter_project_slug/: .gitignore  LICENSE  README.md  pyproject.toml
cookiecutter_project_slug/app/: main.py
cookiecutter_project_slug/docs/: conf.py  index.rst
docs/: conf.py  modules.rst  tests.rst
project_docs/: chat_template.md  notes.md  structure.md
tests/: test_main.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_main.py
